[BSR] Reorganise reset-password translations

--- a/mon-pix/translations/fr.json
+++ b/mon-pix/translations/fr.json
@@ -746,19 +746,19 @@
             "explanation": "Vous avez déjà envoyé le profil ci-dessous à l'organisation {organization}'<br>'le {date,date,LL} à {hour,time,hhmm}"
         },
         "reset-password": {
-            "title": "Changer mon mot de passe",
-            "fields": {
-                "password": {
-                    "label": "Mot de passe"
-                }
-            },
             "actions": {
                 "submit": "Envoyer",
                 "sign-in": "Connectez-vous"
             },
             "error": "Nous sommes désolés, mais votre demande de réinitialisation de mot de passe a déjà été utilisée ou est expirée. Merci de recommencer.",
+            "fields": {
+                "password": {
+                    "label": "Mot de passe"
+                }
+            },
             "instruction": "Saisissez votre nouveau mot de passe",
-            "succeed": "Votre mot de passe a été modifié avec succès."
+            "succeed": "Votre mot de passe a été modifié avec succès.",
+            "title": "Changer mon mot de passe"
         },
         "proposals": {
             "answer": {
