--- a/mon-pix/translations/en.json
+++ b/mon-pix/translations/en.json
@@ -746,19 +746,19 @@
             "explanation": "You already submitted the profile below to the organisation {organization}'<br>'on {date,date,LL} at {hour,time,hhmm}"
         },
         "reset-password": {
-            "title": "Change my password",
-            "fields": {
-                "password": {
-                    "label": "Password"
-                }
-            },
             "actions": {
                 "submit": "Send",
                 "sign-in": "Log in"
             },
             "error": "We’re sorry, but your request to reset your password has already been used or has expired. Please start again.",
+            "fields": {
+                "password": {
+                    "label": "Password"
+                }
+            },
             "instruction": "Enter your new password",
-            "succeed": "Your password has been changed successfully."
+            "succeed": "Your password has been changed successfully.",
+            "title": "Change my password"
         },
         "proposals": {
             "answer": {
