[ORGA] Add translations for team-list page

--- a/orga/translations/en.json
+++ b/orga/translations/en.json
@@ -522,7 +522,8 @@
       "title": "My team",
       "add-member-button": "Invite a member",
       "tabs": {
-        "member": "Members"
+        "member": "Members",
+        "invitation": "Invitations"
       }
     },
     "team-members": {
